# near-omni-client

./: .env.sample  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: format.yml  lint.yml  publish.yml  test.yml
docs/source/: conf.py  index.rst
examples/: .env.sample  aave_deposit_and_withdraw.py  create_transaction.py  transfer_usdc.py  view_access_key.py  view_account.py
src/near_omni_client/: account.py
src/near_omni_client/chain_signatures/: __init__.py  kdf.py  segwit_addr.py
src/near_omni_client/crypto/: __init__.py  constants.py  keypair.py  keypair_base.py  keypair_ed25519.py  keypair_secp256k1.py  public_key.py  signature.py  types.py
src/near_omni_client/exceptions/: exceptions.py
src/near_omni_client/json_rpc/: README.md  access_keys.py  accounts.py  block.py  chunk.py  models.py  transactions.py
src/near_omni_client/networks/: network.py
src/near_omni_client/providers/: __init__.py  provider_factory.py
src/near_omni_client/signers/: __init__.py  local_eth_signer.py  mpc_signer.py  near_keypair_signer.py
src/near_omni_client/transactions/: __init__.py  action_builder.py  (+4 more)
tests/: test_account.py
tests/chain_signatures/: test_kdf.py
tests/crypto/: test_keypair.py  test_keypair_ed25519.py  test_keypair_secp256k1.py  test_public_key.py
tests/json_rpc/: test_access_keys.py  test_accounts.py  test_block.py  test_chunk.py  test_transactions.py  test_view_keys.py
tests/transactions/: test_action_factory.py  test_transaction_builder.py
(+66 files in other folders)
